Fix bug where bottom gradient would overflow

--- a/src/css/gallery-view.less
+++ b/src/css/gallery-view.less
@@ -39,11 +39,11 @@
 
     .content-footer {
         display: block;
-        width: 100%;
         position: absolute;
         z-index: 3;
         bottom: 0;
         left: 0;
+        right: 0;
         height: 20%;
         max-height: 50px;
     }
